--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "8.0.1",
+    "@types/nodemailer": "^7.0.1",
     "astro": "^5.1.1",
+    "firebase": "^12.2.1",
+    "nodemailer": "^7.0.6",
     "react": "18.3.1",
     "tailwindcss": "^3.4.17"
   }
