--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-  "functions": {
-    "src/pages/**/*.astro": {
-      "includeFiles": "**"
-    }
-  },
   "headers": [
     {
       "source": "/(.*)",
@@ -11,6 +6,10 @@
         {
           "key": "Content-Type",
           "value": "text/html; charset=utf-8"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
         }
       ]
     }
