--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "8.0.1",
+    "@types/node-telegram-bot-api": "^0.64.11",
     "@types/nodemailer": "^7.0.1",
     "astro": "^5.1.1",
+    "dotenv": "^17.2.2",
     "firebase": "^12.2.1",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.6",
     "react": "18.3.1",
     "tailwindcss": "^3.4.17"
