--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "8.0.1",
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@types/node-telegram-bot-api": "^0.64.11",
     "@types/nodemailer": "^7.0.1",
     "astro": "^5.1.1",
