--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.5.1",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "8.0.1",
     "@fortawesome/fontawesome-free": "^7.0.1",
