--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.6",
     "react": "18.3.1",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
