--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node-telegram-bot-api": "^0.64.11",
     "@types/nodemailer": "^7.0.1",
     "astro": "^5.1.1",
+    "astro-gtm": "^0.1.0",
     "dotenv": "^17.2.2",
     "firebase": "^12.2.1",
     "node-telegram-bot-api": "^0.66.0",
