--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # SMTP Configuration for Email (Zoho Mail)
 SMTP_HOST=smtp.zoho.com
 SMTP_PORT=587
-SMTP_USER=tu-email@tudominio.com
-SMTP_PASS=tu-contraseña-de-aplicacion
-FROM_EMAIL=tu-email@tudominio.com
-RECIPIENT_EMAIL=notificaciones@tudominio.com
+SMTP_USER=contacto@segurosrp.com
+SMTP_PASS=5U3WJ9Phv0r1
+FROM_EMAIL=contacto@segurosrp.com
+RECIPIENT_EMAIL=contacto@segurosrp.com
 
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=8087584324:AAETE1vWJsowowmqSsiNnF4jbaomo5bk0DA
