--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^5.1.1",
     "dotenv": "^17.2.2",
     "firebase": "^12.2.1",
+    "googleapis": "^164.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.6",
     "react": "18.3.1",
